--- a/complete/src/resource/jenkins/jenkinsfile
+++ b/complete/src/resource/jenkins/jenkinsfile
@@ -3,6 +3,7 @@ node {
       checkout scm
    }
    stage('build') {
+      def mvnHome = tool name: 'Apache Maven 3.6.3', type: 'maven'
       sh '''
          mvn clean package
          cd target
