--- a/complete/src/resource/jenkins/jenkinsfile
+++ b/complete/src/resource/jenkins/jenkinsfile
@@ -5,7 +5,7 @@ node {
    stage('build') {
       def mvnHome = tool name: 'Apache Maven 3.6.3', type: 'maven'
       sh '''
-         mvn clean package
+         ${mvnHome}/bin/mvn clean package
          cd target
          cp ../src/main/resources/web.config web.config
          cp todo-app-java-on-azure-1.0-SNAPSHOT.jar app.jar 
