--- a/complete/src/resource/jenkins/jenkinsfile
+++ b/complete/src/resource/jenkins/jenkinsfile
@@ -1,11 +1,13 @@
 node {
+tools {
+    maven 'M3'
+  }
    stage('init') {
       checkout scm
    }
    stage('build') {
-      def mvnHome = tool name: 'apache-maven-3.6.3', type: 'maven'
       sh '''
-         ${mvnHome}/bin/mvn clean package
+         mvn clean package
          cd target
          cp ../src/main/resources/web.config web.config
          cp todo-app-java-on-azure-1.0-SNAPSHOT.jar app.jar 
