--- a/complete/src/resource/jenkins/jenkinsfile
+++ b/complete/src/resource/jenkins/jenkinsfile
@@ -4,7 +4,8 @@ node {
    }
    stage('build') {
       sh '''
-         mvn clean package
+         def mvnHome = tool name: 'Apache Maven 3.6.3', type: 'maven'
+         ${mvnHome}/bin/mvn clean package
          cd target
          cp ../src/main/resources/web.config web.config
          cp todo-app-java-on-azure-1.0-SNAPSHOT.jar app.jar 
