--- a/complete/src/resource/jenkins/jenkinsfile
+++ b/complete/src/resource/jenkins/jenkinsfile
@@ -8,7 +8,7 @@ node {
          sh "${mvnHome}/bin/mvn -B -DskipTests clean package"
          
          cd target
-         cp ../src/main/resources/web.config web.config
+         cp ../src/main/resource/web.config web.config
          cp todo-app-java-on-azure-1.0-SNAPSHOT.jar app.jar 
          zip todo.zip app.jar web.config
       '''
